<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reddit App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="fake_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_login">Login</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="hint_login">user</string>
    <string name="hint_login_user">user</string>
    <string name="hint_login_pass">password</string>
    <string name="login_button">Login</string>
    <string name="drawer_friends_button">Friends</string>
    <string name="drawer_messages_button">Messages</string>
    <string name="drawer_tags_header">Tags</string>
    <string name="drawer_settings_button">Settings</string>
    <string name="drawer_about_button">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="open_drawer">Navigation menu</string>
    <string name="close_drawer">Close drawer</string>
    <string name="logout_message">Who are you?</string>
    <string name="title_input_label_dialog">What are the labels?</string>
    <string name="descripton_input_label_dialog">Insert the label what you want separated by space</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="about_content">App developmented to the course android development</string>
    <string name="need_login">Hey! Who are you? You need to login</string>
    <string name="sync_account_type">com.vanzstuff.readdit.account</string>
    <string name="content_authority">com.vanzstuff.readdit.provider</string>
    <string name="drawer_subreddit_header">Subreddit</string>
    <string name="in">in</string>
    <string name="link_item_user_in_subreddit">&lt;b>%1$s&lt;/b> in &lt;b>%2$s&lt;/b></string>
    <string name="link_item_ups">%1$d votes</string>
    <string name="link_item_comments">%1$d comments</string>
    <string name="link_item_date">%1$s</string>

</resources>
