<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Container to user profile -->
    <RelativeLayout
        android:id="@+id/drawer_profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">
        <ImageView
            android:id="@+id/drawer_profileimg"
            android:layout_width="@dimen/post_image_width"
            android:layout_height="@dimen/post_image_width"
            android:layout_alignParentTop="true"
            android:background="@android:drawable/sym_def_app_icon"/>
        <TextView
            android:id="@+id/drawer_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/drawer_profileimg"
            android:paddingTop="@dimen/default_padding"
            android:text="@string/logout_message"/>
        </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/drawer_subreddit_header"/>
    <ListView
        android:id="@+id/drawer_subreddits"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/drawer_tags_header"/>
    <ListView
        android:id="@+id/drawer_tags"
        android:choiceMode="singleChoice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/drawer_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_settings_button"/>
    <Button
        android:id="@+id/drawer_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/drawer_about_button"/>

</LinearLayout>