<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/default_padding"
    android:paddingEnd="@dimen/default_padding"
    android:layout_margin="@dimen/default_margin">

    <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/link_item_thumbnail"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_width="@dimen/default_thumbnail_width"
        android:layout_height="@dimen/default_thumbnail_height"/>

    <TextView
        android:id="@+id/link_item_user"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/link_item_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        style="@style/link_item_user_style"
        android:text="@string/link_item_user_in_subreddit"/>

    <TextView
        android:id="@+id/link_item_domain"
        android:layout_below="@id/link_item_user"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        style="@style/link_item_domain_style"
        android:text="google.com"/>

    <TextView
        android:id="@+id/link_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/link_item_domain"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/link_item_thumbnail"
        android:paddingStart="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        style="@style/link_item_title_style"
        android:text="Post title"/>

    <TextView
        android:id="@+id/link_item_votes"
        android:layout_below="@id/link_item_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/link_item_ups"/>
    <TextView
        android:id="@+id/link_item_comments"
        android:layout_below="@id/link_item_title"
        android:layout_toEndOf="@id/link_item_votes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/link_item_comments"/>

    <TextView
        android:id="@+id/link_item_time"
        android:layout_below="@id/link_item_title"
        android:layout_toEndOf="@id/link_item_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/default_padding"
        android:paddingTop="@dimen/default_padding"
        android:text="@string/link_item_date"/>

</RelativeLayout>